--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <meta name="google-site-verification" content="hhxS2C3V79xhvU54LFEaD3p8u7q7rFFLPeGs73P3uks" />
-    <link rel="canonical" href="https://thenewportship.com/">
-    <link rel="amphtml" href="https://thenewportship.com/" />
+    <meta name="google-site-verification" content="5vbmmLEnSaplq0qTVKpBDy0fpRz1VkmSOvSuFpVFtqw" />
+    <link rel="canonical" href="https://ftp.matchid.io/">
+    <link rel="amphtml" href="https://ftp.matchid.io/" />
     <link rel="icon" type="image/png" href="//649b4c-83.myshopify.com/cdn/shop/files/KotaSpin_Favicon.jpg?crop=center&height=32&v=1710838257&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       KotaSpin Daftar Link Slot Gampang Maxwin x500
 </title>
@@ -19,7 +19,7 @@
     
 
 <meta property="og:site_name" content="KotaSpin Daftar Link Slot Gampang Maxwin x500">
-<meta property="og:url" content="https://thenewportship.com/">
+<meta property="og:url" content="https://ftp.matchid.io/">
 <meta property="og:title" content="KotaSpin Daftar Link Slot Gampang Maxwin x500">
 <meta property="og:type" content="product">
 <meta property="og:description" content="Dapatkan kesempatan memenangkan hadiah hingga x500 lipat dengan mendaftar dan bermain slot di KotaSpin. Temukan link-link slot yang mudah menang di situs kami. Dengan banyaknya situs-situs penipuan / phising yang beredar belakangan ini, kami sebagai Situs Resmi KotaSpin ingin mengingatkan Anda untuk lebih berhati-hati "><meta property="og:image" content="http://649b4c-83.myshopify.com/cdn/shop/files/Slot10.jpg?v=1710837467">
