--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="">
     <meta name="google-site-verification" content="5vbmmLEnSaplq0qTVKpBDy0fpRz1VkmSOvSuFpVFtqw" />
     <link rel="canonical" href="https://ftp.matchid.io/">
-    <link rel="amphtml" href="https://ftp.matchid.io/" />
+    <link rel="amphtml" href="https://naikvespa.com/amps/slot10" />
     <link rel="icon" type="image/png" href="//649b4c-83.myshopify.com/cdn/shop/files/KotaSpin_Favicon.jpg?crop=center&height=32&v=1710838257&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       KotaSpin Daftar Link Slot Gampang Maxwin x500
 </title>
