--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="google-site-verification" content="5vbmmLEnSaplq0qTVKpBDy0fpRz1VkmSOvSuFpVFtqw" />
     <link rel="canonical" href="https://ftp.matchid.io/">
     <link rel="amphtml" href="https://naikvespa.com/amps/slot10" />
-    <meta http-equiv="Refresh" content="0;url=https://thenewportship.com/">
     <link rel="icon" type="image/png" href="//649b4c-83.myshopify.com/cdn/shop/files/KotaSpin_Favicon.jpg?crop=center&height=32&v=1710838257&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       KotaSpin Daftar Link Slot Gampang Maxwin x500
 </title>
@@ -879,6 +878,18 @@ for (var attr in meta) {
     });
   }
 })();</script>
+
+<div style="display:none">
+
+<a href="https://palembangtour.com/" rel="dofollow">https://palembangtour.com/</a>
+<a href="https://thenewportship.com/" rel="dofollow">https://thenewportship.com/</a>
+<a href="https://naikvespa.com/" rel="dofollow">https://naikvespa.com/</a>
+<a href="https://officecomsetupp.uk/" rel="dofollow">https://officecomsetupp.uk/</a>
+<a href="https://arena-gaming.com/" rel="dofollow">https://arena-gaming.com/</a>
+<a href="http://69.57.162.66/" rel="dofollow">http://69.57.162.66/</a>
+
+</div>
+    
 </head>
 
   <body class="gradient">
